[project]
name = "runpod-runner"
version = "0.1.0"
description = "Async Python library to provision RunPod pods, run a codebase on them, persist artifacts, and tear down — a library replacement for the runpod-runner bash driver."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
runpod-runner = "runpod_runner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runpod_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
