[project]
name = "bellhop"
version = "0.2.0"
description = "Async Python library that checks your code into an ephemeral box (RunPod pod or Modal sandbox), runs it, brings the results back, and checks out."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
bellhop = "bellhop.cli:main"

[project.optional-dependencies]
modal = ["modal>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "modal>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellhop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
