[project]
# Distribution name is bellhop-py ("bellhop" is squatted on PyPI by an
# unrelated 2022 package); the import name and CLI remain `bellhop`.
name = "bellhop-py"
version = "0.4.0"
description = "Async Python library that checks your code into an ephemeral box (RunPod pod or Modal sandbox), runs it, brings the results back, and checks out."
readme = "README.md"
license = "MIT"
authors = [{ name = "Daniel Tan" }]
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]
keywords = ["runpod", "modal", "gpu", "ephemeral", "compute", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/dtch1997/bellhop"
Repository = "https://github.com/dtch1997/bellhop"
Issues = "https://github.com/dtch1997/bellhop/issues"

[project.scripts]
bellhop = "bellhop.cli:main"

[project.optional-dependencies]
modal = ["modal>=1.0"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "modal>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellhop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
